Removed index from academy, some bug fix

--- a/app/views/academy/questions/index.html.erb
+++ b/app/views/academy/questions/index.html.erb
@@ -1,6 +1,6 @@
 <ol class="breadcrumb" id="breadcrumbAds">
   <li class="active">
-    <a class="url" href="<%= academy_path %>"><i class="fa fa-tags"></i> Academia</a> >
+    <i class="fa fa-tags"></i> Academia >
     <% if user_signed_in? %>
         <a class="url" href="<%= academy_questions_path %>">Perguntas</a> </li>
         <div class='pull-right'>
