--- a/app/views/academy/tutorials/show.html.erb
+++ b/app/views/academy/tutorials/show.html.erb
@@ -1,8 +1,8 @@
 <ol class="breadcrumb" id="breadcrumbAds">
   <li class="active">
-    <a class="url" href="<%= academy_path %>"><i class="fa fa-tags"></i> Academia</a>
-    <a class="url" href="<%= academy_tutorials_path %>"> > Tutoriais</a>
-    <a class="url" href="<%= academy_tutorial_path(@academy_tutorial.id) %>"> > <%= @academy_tutorial.title %></a>
+    <i class="fa fa-tags"></i> Academia >
+    <a class="url" href="<%= academy_tutorials_path %>">Tutoriais</a> >
+    <a class="url" href="<%= academy_tutorial_path(@academy_tutorial.id) %>"><%= @academy_tutorial.title %></a>
   </li>
 
   <div style="float:right">
@@ -18,7 +18,7 @@
   <header class="panel-heading border-header text-center">
     <div style="display: inline-block; width: 100%;">
       <div id="category-label" style="float:left; width:30%; text-align:left;">
-        <span>Categoria: </span> 
+        <span>Categoria: </span>
         <span class="label" style="background-color: #<%= @academy_tutorial.category.color %> ; color: black; font-size:12px;">
           <%= @academy_tutorial.category.name %>
         </span>
@@ -46,7 +46,7 @@
                 <span>Autor: </span> <%= @academy_tutorial.user.name %>
               </li>
               <li id="tutorial-date">
-                <span>Data de Criação: </span> 
+                <span>Data de Criação: </span>
                 <abbr class="timeago" title="<%=  @academy_tutorial.created_at.getutc.iso8601 %>">
                   <%=  @academy_tutorial.created_at.to_s %>
                 </abbr>
@@ -73,7 +73,7 @@
         <button type="button" class="btn btn-primary" onclick="location.href='<%= academy_tutorials_path %>'">
           <span class="icon-arrow-left" style=""></span> Voltar
         </button>
-      </div>    
+      </div>
     </div>
   </div>
 </section>
