--- a/app/views/academy/questions/_question.html.erb
+++ b/app/views/academy/questions/_question.html.erb
@@ -1,8 +1,8 @@
 <ol class="breadcrumb" id="breadcrumbAds">
   <li class="active">
-    <a class="url" href="<%= academy_path %>"><i class="fa fa-tags"></i> Academia</a></li>
-    <a class="url" href="<%= academy_questions_path %>"> > Perguntas</a>
-  <a class="url" href="<%= academy_question_path(@academy_question.id) %>"> > <%= @academy_question.title %></a>
+    <i class="fa fa-tags"></i> Academia</li> >
+    <a class="url" href="<%= academy_questions_path %>">Perguntas</a> >
+  <a class="url" href="<%= academy_question_path(@academy_question.id) %>"><%= @academy_question.title %></a>
   </li>
   <% if user_signed_in? %>
       <%= link_to '<i class="fa fa-plus"></i>Nova Pergunta'.html_safe, new_academy_question_path,:class=> "url", style:"float:right"%>
@@ -20,7 +20,7 @@
         <% end %>
       </span>
       <br>
-      <h3> 
+      <h3>
         <%= @academy_question.title %>
       </h3>
     </header>
