--- a/app/views/event/events/_form.html.erb
+++ b/app/views/event/events/_form.html.erb
@@ -55,7 +55,7 @@
       <% if action_name == "edit" %>
         <%= link_to '<span class="icon-arrow-left" style="margin-right: 5px;"></span>Voltar'.html_safe, event_event_path(params[:id]), class: "btn btn-primary" %>
       <% else %>
-        <%= link_to '<span class="icon-arrow-left" style="margin-right: 5px;"></span>Voltar'.html_safe, myevents_path, class: "btn btn-primary" %>
+        <%= link_to '<span class="icon-arrow-left" style="margin-right: 5px;"></span>Voltar'.html_safe, myevents_path(current_user.id), class: "btn btn-primary" %>
       <% end %>
 
       <div class="actions" style="float:right">
