--- a/app/views/academy/answers/_form.html.erb
+++ b/app/views/academy/answers/_form.html.erb
@@ -2,7 +2,7 @@
     <div class="row">
     <div class="col-sm-12 col-md-12">
       <div class="panel" id="form_message">
-          <header class="panel-heading border-header">
+          <header class="panel-heading border-header" style="background-color:#f5f5f5; border-bottom:1px solid #dddddd;">
               Resposta
           </header>
         <div class="panel-body">
