--- a/app/views/academy/questions/edit.html.erb
+++ b/app/views/academy/questions/edit.html.erb
@@ -1,8 +1,8 @@
 <ol class="breadcrumb" id="breadcrumbAds">
   <li class="active">
-    <a class="url" href="<%= academy_path %>"><i class="fa fa-tags"></i> Academia</a>
-    <a class="url" href="<%= academy_questions_path %>"> > Perguntas</a>
-    <a class="url" href="<%= academy_questions_path(@academy_question.id) %>"> > <%= @academy_question.title %></a>
+    <i class="fa fa-book"></i> Academia >
+    <a class="url" href="<%= academy_questions_path %>"> Perguntas</a> >
+    <a class="url" href="<%= academy_questions_path(@academy_question.id) %>"> <%= @academy_question.title %></a>
   </li>
   <% if user_signed_in? %>
     <div class="pull-right">
