[Add Feture] Send Email how send a message

--- a/app/views/user_mailer/send_message_ad.html.erb
+++ b/app/views/user_mailer/send_message_ad.html.erb
@@ -1,6 +1,8 @@
 <html>
-<h5>Enviar um email por causa de uma mensagem</h5>
-Coisa: <%= @aasdd %> <br>
-coisa: <%= @sender %>
 
+<h3>Mensagem de <%= @name_sender %></h3>
+<h4>Anúncio <%= @name_ad %></h4> 
+<hr>
+Mensagem: <h5><%= @msg %></h5>
+<hr>
 </html>
