--- a/app/views/user_mailer/send_message_ad.text.erb
+++ b/app/views/user_mailer/send_message_ad.text.erb
@@ -1,3 +1,8 @@
-========================
-ENVIADO UM EMAIL
-========================
+
+Mensagem de <%= @name_sender %>
+
+Anúncio <%= @name_ad %>
+
+---Mensagem---------------------------------------------------------
+<%= @msg %>
+--------------------------------------------------------------------
