--- a/app/views/academy/answers/_form_aux.html.erb
+++ b/app/views/academy/answers/_form_aux.html.erb
@@ -26,7 +26,7 @@
   </div>
 </div>
 
-<div class="panel-footer" id="answer-footer">
+<div class="panel-footer" id="buttons-answer">
   <div class="fields">
     <%= link_to '<span class="icon-arrow-left" style="margin-right: 5px; color: white;"></span>Voltar'.html_safe, academy_questions_path, class: "btn btn-primary"%>
     <div class="actions" style="float:right">
