--- a/app/views/academy/questions/new.html.erb
+++ b/app/views/academy/questions/new.html.erb
@@ -1,4 +1,4 @@
-<ol class="breadcrumb" id="breadcrumbAds">
+<ol class="breadcrumb" id="breadcrumbAds" style="border: 1px solid #dddddd;">
   <li class="active">
     <i class="fa fa-book"></i> Academia</li> >
     <a class="url" href="<%= academy_questions_path %>"> Perguntas</a> >
