--- a/app/assets/stylesheets/academy/workshops.css
+++ b/app/assets/stylesheets/academy/workshops.css
@@ -25,7 +25,7 @@
 	border-radius: 0 4px 0 0;
 }
 
-.title_show_workshop{
+.title_show_workshop {
 	font-size: 30px;
 	text-align: left;
 	margin-top: 10px;
@@ -167,8 +167,12 @@
 	color: black;
 }
 
+.button_back a {
+	color: white !important;
+}
+
 .button_back a:hover{
-	color:black;
+	color: black;
 }
 
 #edit-workshop {
@@ -178,6 +182,26 @@
 	margin-bottom: -10px;
 }
 
-.fields_newWorkshop{
-	margin-top: 4%;
+.fields_newWorkshop a {
+	color: white !important;
+}
+
+#buttons-workshop {
+	position: absolute;
+	left: 16px;
+	right: 1px;
+	bottom: 1px;
+	height: 55px;
+	width: auto;
+	border-color: #dddddd;
+}
+
+#buttons-whorkshop a {
+	height: 100%;
+	vertical-align: middle;
+	color: white !important;
+}
+
+#buttons-whorkshop div > div {
+	vertical-align: middle;
 }
