--- a/app/views/academy/tutorials/show.html.erb
+++ b/app/views/academy/tutorials/show.html.erb
@@ -1,6 +1,6 @@
-<ol class="breadcrumb" id="breadcrumbAds">
+<ol class="breadcrumb" id="breadcrumbAds" style="border: 1px solid #dddddd;">
   <li class="active">
-    <i class="fa fa-tags"></i> Academia >
+    <i class="fa fa-book"></i> Academia >
     <a class="url" href="<%= academy_tutorials_path %>">Tutoriais</a> >
     <a class="url" href="<%= academy_tutorial_path(@academy_tutorial.id) %>"><%= @academy_tutorial.title %></a>
   </li>
@@ -14,11 +14,10 @@
 
 <p id="notice"><%= notice %></p>
 
-<section class="panel">
-  <header class="panel-heading border-header text-center">
+<section class="panel" style="border: 1px solid #dddddd;">
+  <header class="panel-heading border-header text-center" style="background-color:#f5f5f5; border-bottom: 1px solid #dddddd;">
     <div style="display: inline-block; width: 100%;">
       <div id="category-label" style="float:left; width:30%; text-align:left;">
-        <span>Categoria: </span>
         <span class="label" style="background-color: #<%= @academy_tutorial.category.color %> ; color: black; font-size:12px;">
           <%= @academy_tutorial.category.name %>
         </span>
