--- a/app/views/admin/academy/workshops/edit.html.erb
+++ b/app/views/admin/academy/workshops/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing admin_academy_workshop</h1>
+<h1>Editar Workshop</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @admin_academy_workshop %> |
-<%= link_to 'Back', admin_academy_workshops_path %>
+<%= link_to 'Ver', @admin_academy_workshop %> |
+<%= link_to 'Voltar', admin_academy_workshops_path %>
