--- a/app/views/admin/cities/_form.html.erb
+++ b/app/views/admin/cities/_form.html.erb
@@ -16,7 +16,7 @@
     <%= f.text_field :city %>
   </div>
   <div class="field">
-    <%= f.label :district_id %><br>
+    <%= f.label :distrito %><br>
       <%= f.collection_select(:district_id,@district,:id,:name, :include_blank => 'Escolha uma opção') %>
   </div>
   <div class="actions">
