--- a/app/views/admin/event/events/edit.html.erb
+++ b/app/views/admin/event/events/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing event_event</h1>
+<h1>Editar Evento</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', [:admin, @event_event] %> |
-<%= link_to 'Back', admin_event_events_path %>
+<%= link_to 'Ver', [:admin, @event_event] %> |
+<%= link_to 'Voltar', admin_event_events_path %>
