--- a/app/views/admin/plans/_form.html.erb
+++ b/app/views/admin/plans/_form.html.erb
@@ -12,23 +12,23 @@
   <% end %>
 
    <div class="field">
-    <%= f.label :name %><br>
+    <%= f.label :nome %><br>
     <%= f.text_field :name %>
   </div>
   <div class="field">
-    <%= f.label :duration %><br>
+    <%= f.label :duração %><br>
     <%= f.text_field :duration %>
   </div>
   <div class="field">
-    <%= f.label :price %><br>
+    <%= f.label :preço %><br>
     <%= f.text_field :price %>
   </div>
   <div class="field">
-    <%= f.label :ads_limit %><br>
+    <%= f.label :limite_de_anúncios %><br>
     <%= f.number_field :ads_limit %>
   </div>
   <div class="field">
-    <%= f.label :event_limit %><br>
+    <%= f.label :limite_de_eventos %><br>
     <%= f.number_field :event_limit %>
   </div>
   <div class="actions">
