--- a/app/views/admin/plans/edit.html.erb
+++ b/app/views/admin/plans/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @admin_plan %> |
-<%= link_to 'Back', admin_plans_path %>
+<%= link_to 'Ver', @admin_plan %> |
+<%= link_to 'Voltar', admin_plans_path %>
