--- a/app/views/admin/academy/tutorials/edit.html.erb
+++ b/app/views/admin/academy/tutorials/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing academy_tutorial</h1>
+<h1>Editar Tutorial</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @academy_tutorial %> |
-<%= link_to 'Back', admin_academy_tutorials_path %>
+<%= link_to 'Ver', @academy_tutorial %> |
+<%= link_to 'Voltar', admin_academy_tutorials_path %>
