--- a/app/views/admin/academy/tutorials/show.html.erb
+++ b/app/views/admin/academy/tutorials/show.html.erb
@@ -7,5 +7,5 @@
 </div>
 
 
-<%= link_to 'Edit', edit_academy_tutorial_path(@academy_tutorial) %> |
-<%= link_to 'Back', admin_academy_tutorials_path %>
+<%= link_to 'Editar', edit_academy_tutorial_path(@academy_tutorial) %> |
+<%= link_to 'Voltar', admin_academy_tutorials_path %>
