--- a/app/views/admin/academy/workshops/new.html.erb
+++ b/app/views/admin/academy/workshops/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New admin_academy_workshop</h1>
+<h1>New Workshop</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', admin_academy_workshops_path %>
+<%= link_to 'Voltar', admin_academy_workshops_path %>
