--- a/app/views/admin/categories/edit.html.erb
+++ b/app/views/admin/categories/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Mostrar', admin_category_path(@category) %> |
+<%= link_to 'Ver', admin_category_path(@category) %> |
 <%= link_to 'Voltar', admin_categories_path %>
