--- a/app/views/admin/event/events/new.html.erb
+++ b/app/views/admin/event/events/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New event_event</h1>
+<h1>Novo evento</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', admin_event_events_path %>
+<%= link_to 'Voltar', admin_event_events_path %>
