--- a/app/views/admin/price_types/edit.html.erb
+++ b/app/views/admin/price_types/edit.html.erb
@@ -3,4 +3,4 @@
 <%= render 'form' %>
 
 <!--%= link_to 'Show', admin_price_type_path(@price_type) %-->
-<%= link_to 'Back', admin_price_types_path %>
+<%= link_to 'Voltar', admin_price_types_path %>
