--- a/app/views/admin/publicities/edit.html.erb
+++ b/app/views/admin/publicities/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing admin_publicity</h1>
+<h1>Editar Publicidade</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @admin_publicity %> |
-<%= link_to 'Back', admin_publicities_path %>
+<%= link_to 'Ver', @admin_publicity %> |
+<%= link_to 'Voltar', admin_publicities_path %>
