--- a/app/views/admin/publicities/new.html.erb
+++ b/app/views/admin/publicities/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New admin_publicity</h1>
+<h1>Nova Publicidade</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', admin_publicities_path %>
+<%= link_to 'Voltar', admin_publicities_path %>
