--- a/app/views/admin/publicities/show.html.erb
+++ b/app/views/admin/publicities/show.html.erb
@@ -1,12 +1,12 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Title:</strong>
+  <strong>Título:</strong>
   <%= @admin_publicity.title %>
 </p>
 
 <p>
-  <strong>Description:</strong>
+  <strong>Descrição:</strong>
   <%= @admin_publicity.description %>
 </p>
 
@@ -16,25 +16,25 @@
 </p>
 
 <p>
-  <strong>Expire date:</strong>
+  <strong>Data de Expiração:</strong>
   <%= @admin_publicity.expire_date %>
 </p>
 
 <p>
-  <strong>Owner:</strong>
+  <strong>Dono:</strong>
   <%= @admin_publicity.owner %>
 </p>
 
 
 <p>
-  <b>Image:</b>
+  <b>Imagem:</b>
   <%= image_tag @admin_publicity.image.url %>
 </p>
 
 <p>
-  <strong>Is deleted:</strong>
+  <strong>Apagado?:</strong>
   <%= @admin_publicity.is_deleted %>
 </p>
 
-<%= link_to 'Edit', edit_admin_publicity_path(@admin_publicity) %> |
-<%= link_to 'Back', admin_publicities_path %>
+<%= link_to 'Editar', edit_admin_publicity_path(@admin_publicity) %> |
+<%= link_to 'Voltar', admin_publicities_path %>
